# RACER

./: .gitignore  Dockerfile  Makefile  README.md
swarm_exploration/: .clang-format
swarm_exploration/active_perception/: CMakeLists.txt
swarm_exploration/bag/: benchmark.sh  explore_record.sh
swarm_exploration/exploration_manager/: CMakeLists.txt  package.xml
swarm_exploration/exploration_manager/config/: swarm.rviz  swarm_bag.rviz
swarm_exploration/exploration_manager/include/exploration_manager/: expl_data.h  fast_exploration_fsm.h  fast_exploration_manager.h
swarm_exploration/exploration_manager/launch/: bag_rviz.launch  gen_map.launch  ground_node.launch  rviz.launch  second_swarm.launch  simulator_light.xml  single_drone_exploration.xml  single_drone_exploration_realworld.xml  single_drone_planner.xml  single_drone_planner_realworld.xml  swarm_exploration.launch  swarm_exploration_2.launch  swarm_exploration_realworld.launch  tsp_server.launch
swarm_exploration/exploration_manager/launch/old/: algorithm.xml  bag_swarm.launch  bag_swarm2.launch
swarm_exploration/exploration_manager/msg/: DeletedGoals.msg  DroneState.msg  GridIds.msg  GridTour.msg  HGrid.msg  PairOpt.msg  PairOptResponse.msg  SentGoals.msg
swarm_exploration/exploration_manager/src/: fast_exploration_fsm.cpp  fast_exploration_manager.cpp  ground_node.cpp
swarm_exploration/plan_env/: CMakeLists.txt  package.xml
swarm_exploration/plan_manage/: CMakeLists.txt
swarm_exploration/utils/lkh_mtsp_solver/: CMakeLists.txt  LKHmain.c  package.xml
swarm_exploration/utils/lkh_mtsp_solver/include/: BIT.h  Delaunay.h  GainType.h  Genetic.h  GeoConversion.h  Hashing.h  Heap.h  LKH.h  Segment.h  Sequence.h  gpx.h
swarm_exploration/utils/lkh_mtsp_solver/include/lkh_mtsp_solver/: lkh3_interface.h
swarm_exploration/utils/lkh_mtsp_solver/resource/: amtsp.atsp  amtsp.par  amtsp.tour  amtsp2_1.atsp  amtsp2_1.par  amtsp2_1.tour  amtsp2_2.atsp  amtsp2_2.par  amtsp2_2.tour  amtsp2_3.atsp  amtsp2_3.par  amtsp2_3.tour  amtsp2_4.atsp  amtsp2_4.par  amtsp2_4.tour  amtsp3_1.atsp  amtsp3_1.par  amtsp3_1.tour  amtsp3_2.atsp  amtsp3_2.par  amtsp3_2.tour  amtsp3_3.atsp  amtsp3_3.par  amtsp3_3.tour  amtsp_1.atsp  amtsp_1.par  amtsp_1.tour  amtsp_2.atsp  amtsp_2.par  amtsp_2.tour  amtsp_3.atsp  amtsp_3.par  amtsp_3.tour  amtsp_4.atsp  amtsp_4.par  amtsp_4.tour  drone_1.par  drone_1.tour  drone_1.tsp  drone_2.par  (+2 more)
swarm_exploration/utils/lkh_mtsp_solver/src/: AddCandidate.c  AddExtraCandidates.c  AllocateStructures.c  BIT.c  Best2OptMove.c  Best3OptMove.c  Best4OptMove.c  Best5OptMove.c  BestKOptMove.c  BestSpecialOptMove.c  BridgeGain.c  C.c  CTSP_InitialTour.c  CVRP_InitialTour.c  CandidateReport.c  ChooseInitialTour.c  CreateCandidateSet.c  CreateDelaunayCandidateSet.c  CreateNNCandidateSet.c  CreateQuadrantCandidateSet.c  Create_POPMUSIC_CandidateSet.c  Distance.c  Distance_MTSP.c  Distance_SOP.c  ERXT.c  FindTour.c  FixedOrCommonCandidates.c  Flip_SL.c  Forbidden.c  Gain23.c  GenerateCandidates.c  Genetic.c  GetTime.c  GreedyTour.c  Heap.c  Improvement.c  IsPossibleCandidate.c  KSwapKick.c  LinKernighan.c  MTSP2TSP.c  (+62 more)
swarm_exploration/utils/lkh_mtsp_solver/src2/: lkh3_interface.cpp  mtsp_node.cpp
swarm_exploration/utils/lkh_mtsp_solver/srv/: SolveMTSP.srv
swarm_exploration/utils/lkh_tsp_solver/: CMakeLists.txt  package.xml  resourcetest.tsp
swarm_exploration/utils/lkh_tsp_solver/src/: lkh_interface.cpp
swarm_exploration/utils/lkh_tsp_solver/src2/: tsp_node.cpp
uav_simulator/local_sensing/: CMakeLists.txt
(+79 files in other folders)
